Fixed issue: user vectors had wrong number of features. Changed python script to 2 parameters Ready to add anime to site

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "[3240 rows x 11 columns]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,15 +432,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found at position: 78, count: 238\n",
-      "Found at position: 155, count: 70\n",
+      "Found at position: 51, count: 196\n",
+      "Found at position: 155, count: 67\n",
       "num favourites: 9302 9302\n",
       "9302\n"
      ]
@@ -588,8 +588,8 @@
        "      <td>Female</td>\n",
        "      <td>2001</td>\n",
        "      <td>11192</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>[Action, Supernatural, Comedy]</td>\n",
+       "      <td>Gen-Z</td>\n",
+       "      <td>[Action, Supernatural, Shounen]</td>\n",
        "      <td>New-Gen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -617,7 +617,7 @@
        "      <td>1994</td>\n",
        "      <td>662</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Comedy, Adventure, Drama]</td>\n",
+       "      <td>[Comedy, Shounen, Adventure]</td>\n",
        "      <td>Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -630,8 +630,8 @@
        "      <td>Male</td>\n",
        "      <td>1995</td>\n",
        "      <td>14012</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>[Supernatural, Drama, Comedy]</td>\n",
+       "      <td>Gen-Z</td>\n",
+       "      <td>[Supernatural, Comedy, Drama]</td>\n",
        "      <td>New-Gen</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -661,28 +661,28 @@
        "4     Female        1992           39703  Millenials   \n",
        "...      ...         ...             ...         ...   \n",
        "9297    Male        1993           10701  Millenials   \n",
-       "9298  Female        2001           11192       Gen Z   \n",
+       "9298  Female        2001           11192       Gen-Z   \n",
        "9299    Male        1986           13168  Millenials   \n",
        "9300  Female        1994             662  Millenials   \n",
-       "9301    Male        1995           14012       Gen Z   \n",
+       "9301    Male        1995           14012       Gen-Z   \n",
        "\n",
-       "                          fav_genres fav_anime_period  \n",
-       "0          [Comedy, Shoujo, Romance]          New-Gen  \n",
-       "1            [Action, Drama, Comedy]          New-Gen  \n",
-       "2            [Comedy, School, Drama]          Classic  \n",
-       "3     [Action, Super Power, Shounen]          Classic  \n",
-       "4          [Action, Shounen, Comedy]          New-Gen  \n",
-       "...                              ...              ...  \n",
-       "9297      [Fantasy, Romance, Comedy]          New-Gen  \n",
-       "9298  [Action, Supernatural, Comedy]          New-Gen  \n",
-       "9299    [Action, Adventure, Shounen]          Classic  \n",
-       "9300      [Comedy, Adventure, Drama]          Classic  \n",
-       "9301   [Supernatural, Drama, Comedy]          New-Gen  \n",
+       "                           fav_genres fav_anime_period  \n",
+       "0           [Comedy, Shoujo, Romance]          New-Gen  \n",
+       "1             [Action, Drama, Comedy]          New-Gen  \n",
+       "2             [Comedy, School, Drama]          Classic  \n",
+       "3      [Action, Super Power, Shounen]          Classic  \n",
+       "4           [Action, Shounen, Comedy]          New-Gen  \n",
+       "...                               ...              ...  \n",
+       "9297       [Fantasy, Romance, Comedy]          New-Gen  \n",
+       "9298  [Action, Supernatural, Shounen]          New-Gen  \n",
+       "9299     [Action, Adventure, Shounen]          Classic  \n",
+       "9300     [Comedy, Shounen, Adventure]          Classic  \n",
+       "9301    [Supernatural, Comedy, Drama]          New-Gen  \n",
        "\n",
        "[9302 rows x 11 columns]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,10 +706,10 @@
     "]\n",
     "\n",
     "gen_values = [\n",
-    "    \"Gen Alpha\",\n",
-    "    \"Gen Z\",\n",
+    "    \"Gen-Alpha\",\n",
+    "    \"Gen-Z\",\n",
     "    \"Millenials\",\n",
-    "    \"Gen X\"\n",
+    "    \"Gen-X\"\n",
     "]\n",
     "#uf = uf.rename(columns={\"birth_date\":\"generation\"})\n",
     "uf[\"generation\"] = np.select(generations, gen_values, default=uf[\"birth_date\"])\n",
