Added anime to DB. Updated image scraper.

--- a/neighbours.ipynb
+++ b/neighbours.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,59 +1287,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Seinen',\n",
-       " 'Fantasy',\n",
-       " 'Cars',\n",
-       " 'Magic',\n",
-       " 'Shounen',\n",
-       " 'Martial Arts',\n",
-       " 'Mecha',\n",
-       " 'Music',\n",
-       " 'Thriller',\n",
-       " 'Action',\n",
-       " 'Josei',\n",
-       " 'Sports',\n",
-       " 'School',\n",
-       " 'Ecchi',\n",
-       " 'Drama',\n",
-       " 'Romance',\n",
-       " 'Space',\n",
-       " 'Shounen Ai',\n",
-       " 'Parody',\n",
-       " 'Shoujo Ai',\n",
-       " 'Historical',\n",
-       " 'Horror',\n",
-       " 'Samurai',\n",
-       " 'Slice of Life',\n",
-       " 'Shoujo',\n",
-       " 'Psychological',\n",
-       " 'Dementia',\n",
-       " 'Comedy',\n",
-       " 'Police',\n",
-       " 'Adventure',\n",
-       " 'Vampire',\n",
-       " 'Sci-Fi',\n",
-       " 'Harem',\n",
-       " 'Demons',\n",
-       " 'Kids',\n",
-       " 'Supernatural',\n",
-       " 'Super Power',\n",
-       " 'Military',\n",
-       " 'Mystery',\n",
-       " 'Game']"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = pd.read_csv(r\"D:\\dataset\\encoding\\anime_frame.csv\")\n",
     "#t = list(a[\"genre\"])\n",
@@ -1370,7 +1320,19 @@
     "    genre_list = list(set(final_result))\n",
     "    return genre_list\n",
     "x = test(a[\"genre\"])\n",
-    "x"
+    "\n",
+    "#forDB(a[\"genre\"])\n",
+    "#a[\"genre\"]\n",
+    "new_genre = a[\"genre\"].apply(lambda i:str(\",\".join(i).replace(\",\",\"|\").replace(\" \",\"\")))\n",
+    "new_studio = a[\"studio\"].apply(lambda i:i.replace(\",\",\"|\"))\n",
+    "a[\"genre\"] = new_genre\n",
+    "a[\"genre\"]\n",
+    "\n",
+    "for i in a.iterrows():\n",
+    "    print(i[1][0])\n",
+    "#a[\"studio\"]\n",
+    "#a[\"studio\"] = new_studio\n",
+    "#a.to_csv(r\"D:\\dataset\\encoding\\animeDB.csv\", index = False)"
    ]
   }
  ],
